# XMasNameDraw

./: CMakeLists.txt  DrawNames.kdev4  README.md  exclusionhandler.cpp  exclusionhandler.h  main.cpp  namehandler.cpp  namehandler.h
